--- a/Vegetable_Mall_Utils/src/main/resources/email.properties
+++ b/Vegetable_Mall_Utils/src/main/resources/email.properties
@@ -5,5 +5,5 @@ email.Charset=utf-8
 #发送人的邮箱为自己的，用户名可以随便填
 email.From.email=847352186@qq.com
 email.From.name=qinshijiao
-email.Authentication.username=qsj_gold@qq.com
-email.Authentication.password=buxszjmluauibbff
+email.Authentication.username=
+email.Authentication.password=
