--- a/Vegetable_Mall_Utils/src/main/resources/druid.properties
+++ b/Vegetable_Mall_Utils/src/main/resources/druid.properties
@@ -1,10 +1,10 @@
 jdbc.driverClassName=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1/Orders?useUnicode=true&&useSSL=true&&serverTimezone=Asia/Shanghai
+jdbc.url=jdbc:mysql://127.0.0.1/Vegetable_Mall?useUnicode=true&&useSSL=true&&serverTimezone=Asia/Shanghai
 jdbc.username=root
 jdbc.password=123456
-# ³õÊ¼»¯Á¬½ÓÊıÁ¿
+# åˆå§‹åŒ–è¿æ¥æ•°é‡
 initialSize=5
-# ×î´óÁ¬½ÓÊı
+# æœ€å¤§è¿æ¥æ•°
 maxActive=10
-# ×î´óµÈ´ıÊ±¼ä
+# æœ€å¤§ç­‰å¾…æ—¶é—´
 maxWait=3000
