最后一次更新修改了大部分中危漏洞

--- a/Vegetable_Mall_Utils/src/main/resources/druid.properties
+++ b/Vegetable_Mall_Utils/src/main/resources/druid.properties
@@ -1,5 +1,5 @@
 jdbc.driverClassName=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1/Orders?useUnicode=true&&useSSL=true&&serverTimezone=Asia/Shanghai
+jdbc.url=jdbc:mysql://127.0.0.1/Vegetable_Mall?useUnicode=true&&useSSL=true&&serverTimezone=Asia/Shanghai
 jdbc.username=root
 jdbc.password=123456
 # 初始化连接数量
